fix: refactorizar la api, eliminando y simplificando controladores
